tests/core/snapshots/test-inline-error.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Cannot add field",
    "trace": [
      "tests/execution/test-inline-error.md 13#12"
    ],
    "description": "Path [user, address, street] does not exist"
  }
]
