tests/core/snapshots/test-inline-list.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type B {
  c: String
}

type Query {
  foo: B
}

schema {
  query: Query
}
