tests/core/snapshots/test-input-out.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
input Filter {
  a: Int
}

type MyType {
  id: String!
  name: String
}

type Query {
  queryTest(filter: Filter): [MyType]
}

schema {
  query: Query
}
