tests/core/snapshots/test-input-with-arg-out.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "queryTest": [
        {
          "id": 1,
          "name": "foo",
          "num": 1
        }
      ]
    }
  }
}
