tests/core/snapshots/test-interface-from-json.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type B implements IA {
  a: String
  b: String
}

interface IA {
  a: String
}

type Query {
  bar: B
}

schema {
  query: Query
}
