tests/core/snapshots/test-interface-result.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type B implements IA {
  a: String
  b: String
}

scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

interface IA {
  a: String
}

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  bar: IA
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
