tests/core/snapshots/test-interface-result.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

interface IA {
  a: String
}

type B implements IA {
  a: String
  b: String
}

type Query {
  bar: IA @http(url: "http://jsonplaceholder.typicode.com/user")
}
